addedd background pattern

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <img class="pattern-desktop" src="./images/pattern-background-desktop.svg" alt="Pattern">
+  <img class="pattern-mobile" src="./images/pattern-background-mobile.svg" alt="Pattern">
 
   <main>
-    <!-- <img src="./images/pattern-background-desktop.svg" alt="Pattern">
-    <img src="./images/pattern-background-mobile.svg" alt=""> -->
-
     <div class="card shadow-bot">
       <div class="hero">
         <img src="./images/illustration-hero.svg" alt="Illustration Hero">
